# chat-bench

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  EVALUATION.md  LICENSE  Makefile  README.md  pyproject.toml
data/metadata/: generation_state.json  statistics.json
data/queries/: cross_channel.jsonl  specific_detail.jsonl  thread_discrimination.jsonl  topic_retrieval.jsonl
data/reference/: channels.json  mesh_context.md  participants.json
data/splits/: dev.json  test.json
data/tasks/: cross_channel.json  cross_platform_transfer.json  response_retrieval.json  specific_detail.json  summary_matching.json  thread_discrimination.json  thread_retrieval.json  topic_retrieval.json
leaderboard/: app.py  requirements.txt
scripts/: run_models.py  run_remaining.py
src/chat_bench/: __init__.py  baselines.py  build.py  cli.py  data.py  disco.py  metrics.py  models.py  paraphrase.py  robustness.py  runner.py  schemas.py
src/chat_bench/generate/: __init__.py  client.py  pipeline.py  prompts.py  reference_data.py  schemas.py  state.py  validate.py
src/chat_bench/tasks/: conversation_similarity.py  cross_platform.py  response_retrieval.py  summary_matching.py  thread_retrieval.py
tests/: test_baselines.py  test_build.py  test_data.py  test_disco.py  test_metrics.py  test_models.py  test_paraphrase.py  test_pipeline.py  test_robustness.py
