[project]
name = "chat-bench"
version = "0.1.0"
description = "Benchmark for evaluating embedding models on chat/conversational retrieval tasks"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=3.0",
    "datasets>=2.19",
    "pydantic>=2.0",
    "numpy>=1.26",
    "pandas>=2.0",
    "rank-bm25",
    "scikit-learn",
    "tqdm",
    "rich",
    "click",
    "huggingface_hub",
    "requests",
    "matplotlib",
    "seaborn",
    "tabulate",
]

[project.optional-dependencies]
generate = [
    "anthropic>=0.40",
]
dev = [
    "pytest>=8.0",
    "ruff",
]

[project.scripts]
chat-bench = "chat_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chat_bench"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["network: requires network access"]
